Complete Recipe book app

--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -21,8 +21,8 @@
                         class="calculateBtn">CALCULATE</button>
                 </div>
                 <div class="total">
-                    <label for="total">Total:</label><span
-                        id="total"></span>
+                    <label for="total">Total:</label><b><span
+                            id="total"></span></b>
                 </div>
             </div>
         </div>
