complete pomodoro timer

--- a/Pomodoro Timer/index.html
+++ b/Pomodoro Timer/index.html
@@ -5,9 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pomodoro Timer</title>
         <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
+        <h1>Pomodoro Timer</h1>
+        <div class="timer-container">
+            <div id="timer-box" class="timer">
+                <h1 id="time-left">25:00</h1>
+            </div>
+            <div class="timer-control">
+                <button id="start">Start</button>
+                <button id="stop">Stop</button>
+                <button id="reset">Reset</button>
+            </div>
 
-    </body>
-    <script src="index.js"></script>
-</html>
+        </body>
+        <script src="index.js"></script>
+    </html>
